--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,28 @@
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
+
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20211205</version>
+			<type>bundle</type>
+		</dependency>
+
+
+		<dependency>
+			<groupId>com.weicoder</groupId>
+			<artifactId>json</artifactId>
+			<version>3.4.8-jdk8</version>
+		</dependency>
+
+
+		<dependency>
+			<groupId>com.chargebee</groupId>
+			<artifactId>chargebee-java</artifactId>
+			<version>2.12.0</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
